Three days of work to hopefully save weeks over the next year. Here's to releasing more frequently.
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk@1232263 13f79535-47bb-0310-9956-ffa450edef68